--- a/lessons/03-express-templates/expressintro/views/home.handlebars
+++ b/lessons/03-express-templates/expressintro/views/home.handlebars
@@ -1,6 +1,8 @@
-<h1>Welcome Home!</h1>
+<h1>Here's my classes.</h1>
 <ul>
   {{#each classes}}
-    <li>{{this}}</li>
+    <li>
+    	{{this.teacher}} teaches {{this.name}}
+    </li>
   {{/each}}
 </ul>
